# to-monke-classifier

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup_dvc_secrets.sh
.dvc/: config
configs/: config.yaml  infer.yaml  train.yaml
data/raw/: .gitignore  monkey_labels.json.dvc  monkey_labels.txt.dvc  training.dvc  validation.dvc
to_monke_classifier/: commands.py  infer.py  plotting.py  train.py  utils.py
to_monke_classifier/data/: dataset.py  download.py
to_monke_classifier/models/: classifier.py
