[project]
name = "to_monke_classifier"
version = "0.1.0"
description = "Monkeys classifier"
authors = [
    {name = "ekvoron",email = "ekvoron01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "dvc (>=3.59.2,<4.0.0)",
    "dvc[gs] (>=3.59.2,<4.0.0)",
    "dvc-gdrive (>=3.0.1,<4.0.0)",
    "fire (>=0.7.0,<0.8.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "torcheval (>=0.0.7,<0.0.8)",
    "onnx (>=1.18.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"

[tool.isort]
profile = "black"
